# cpp-googletest-template

./: CMakeLists.txt  README.md
include/average/: gjennomsnitt.h
scripts/: setdir.sh  setenv.sh
src/: customer.c  gjennomsnitt.cpp  main.cpp  widget.c
test/: CMakeLists.txt  customer.cpp  gjennomsnitt.cpp  widget.cpp
